# eda-lvl5-dnatool

./: .gitignore  Aligner.cpp  Aligner.h  CMakeLists.txt  DirectionMat.cpp  DirectionMat.h  Doxyfile  GBReader.cpp  GBReader.h  GenData.cpp  GenData.h  Needlemachine.cpp  Needlemachine.h  README.md  devtest.cpp  main.cpp  main_test.cpp  output.txt  sampleA.txt  sampleB.txt
docs/html/: _aligner_8cpp.html  _aligner_8cpp__incl.map  _aligner_8cpp__incl.md5  _aligner_8cpp_source.html  _aligner_8h.html  _aligner_8h__dep__incl.map  _aligner_8h__dep__incl.md5  _aligner_8h__incl.map  _aligner_8h__incl.md5  _aligner_8h_source.html  _direction_mat_8cpp.html  _direction_mat_8cpp__incl.map  _direction_mat_8cpp__incl.md5  _direction_mat_8cpp_source.html  _direction_mat_8h.html  _direction_mat_8h__dep__incl.map  _direction_mat_8h__dep__incl.md5  _direction_mat_8h__incl.map  _direction_mat_8h__incl.md5  _direction_mat_8h_source.html  _g_b_reader_8cpp.html  _g_b_reader_8cpp__incl.map  _g_b_reader_8cpp__incl.md5  _g_b_reader_8cpp_source.html  _g_b_reader_8h.html  _g_b_reader_8h__dep__incl.map  _g_b_reader_8h__dep__incl.md5  _g_b_reader_8h__incl.map  _g_b_reader_8h__incl.md5  _g_b_reader_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  class_direction_mat-members.html  class_direction_mat.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  (+18 more)
docs/latex/: _aligner_8cpp.tex  _aligner_8cpp.tex.tmp  _aligner_8cpp__incl.dot  _aligner_8cpp_source.tex  _aligner_8h.tex  _aligner_8h__dep__incl.dot  _aligner_8h__incl.dot  _aligner_8h_source.tex  (+32 more)
(+81 files in other folders)
